--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="colorNiveauSecuriteInformatique">#638f74</color>
     <color name="colorBackgroundNomAntivirus">#233764</color>
     <color name="colorNomAntivirus">#fff</color>
+    <color name="colorNomFourniture">#D0D663</color>
     <color name="colorVersionAntivirus">#ce871f</color>
     <color name="colorProgressBarFormationEmployes">#366821</color>
     <color name="colorBackgroundProgressBarFormationEmployes">#5a8d5b</color>
