--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,8 @@
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="12dp"
                         android:indeterminate="false"
+                        android:clickable="true"
+                        android:focusable="true"
                         android:indeterminateTintMode="src_atop"
                         android:max="100"
                         android:progress="0"/>
@@ -2336,7 +2338,7 @@
                 android:background="@color/colorBackgroundRelativeLayoutEmployes"
                 android:layout_marginTop="40dp"
                 android:alpha="0.9"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:id="@+id/RelativeLayoutContentDetailReputation"
