Mise en place du graphique concernant l'ajout de ressources

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2899,7 +2899,7 @@
                 android:background="@color/colorBackgroundRelativeLayoutEmployes"
                 android:layout_marginTop="40dp"
                 android:alpha="0.9"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:id="@+id/RelativeLayoutContentDetailRessources"
@@ -2980,8 +2980,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="40dp"
-                        android:layout_marginStart="60dp"
-                        android:layout_marginEnd="60dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginBottom="5dp"
                         android:layout_alignStart="@+id/RelativeLayoutRessources2"
                         android:layout_below="@+id/RelativeLayoutRessources2"
                         android:layout_alignEnd="@+id/RelativeLayoutRessources2">
@@ -2990,8 +2992,7 @@
                             android:id="@+id/RelativeLayoutContentPremiereRessources"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginBottom="30dp">
+                            android:layout_alignParentStart="true">
 
                             <RelativeLayout
                                 android:id="@+id/RelativeLayoutPremiereRessources"
@@ -3004,14 +3005,14 @@
                                 android:paddingEnd="15dp"
                                 android:paddingTop="10dp"
                                 android:paddingBottom="10dp"
-                                android:alpha="0.8">
+                                android:alpha="0.9">
 
                                 <TextView
                                     android:id="@+id/TextViewNombrePremiereRessources"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/premiereRessources"
-                                    android:textSize="30sp"
+                                    android:textSize="35sp"
                                     android:layout_centerVertical="true"/>
 
                                 <ImageView
@@ -3020,7 +3021,9 @@
                                     android:layout_height="wrap_content"
                                     android:layout_toEndOf="@+id/TextViewNombrePremiereRessources"
                                     android:layout_marginStart="10dp"
-                                    android:src="@drawable/ressources"/>
+                                    android:src="@drawable/ressources"
+                                    android:layout_centerVertical="true"
+                                    android:alpha="1"/>
                             </RelativeLayout>
 
                             <RelativeLayout
@@ -3044,7 +3047,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/argentPremiereRessources"
-                                    android:textSize="30sp"
+                                    android:textSize="35sp"
                                     android:layout_centerVertical="true"/>
                             </RelativeLayout>
                         </RelativeLayout>
@@ -3053,8 +3056,9 @@
                             android:id="@+id/RelativeLayoutContentDeuxiemeRessources"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginBottom="30dp">
+                            android:layout_marginStart="55dp"
+                            android:layout_marginBottom="30dp"
+                            android:layout_toEndOf="@+id/RelativeLayoutContentPremiereRessources">
 
                             <RelativeLayout
                                 android:id="@+id/RelativeLayoutDeuxiemeRessources"
@@ -3067,67 +3071,118 @@
                                 android:paddingEnd="15dp"
                                 android:paddingTop="10dp"
                                 android:paddingBottom="10dp"
-                                android:alpha="0.8">
+                                android:alpha="0.9">
 
                                 <TextView
-                                    android:id="@+id/TextViewNombrePremiereRessources"
+                                    android:id="@+id/TextViewNombreDeuxiemeRessources"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/premiereRessources"
-                                    android:textSize="30sp"
+                                    android:text="@string/deuxiemeRessources"
+                                    android:textSize="35sp"
                                     android:layout_centerVertical="true"/>
 
                                 <ImageView
-                                    android:id="@+id/ImageViewPremiereRessources"
+                                    android:id="@+id/ImageViewDeuxiemeRessources"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_toEndOf="@+id/TextViewNombrePremiereRessources"
+                                    android:layout_toEndOf="@+id/TextViewNombreDeuxiemeRessources"
                                     android:layout_marginStart="10dp"
-                                    android:src="@drawable/ressources"/>
+                                    android:src="@drawable/ressources"
+                                    android:layout_centerVertical="true"/>
                             </RelativeLayout>
 
                             <RelativeLayout
-                                android:id="@+id/RelativeLayoutPrixPremiereRessources"
+                                android:id="@+id/RelativeLayoutPrixDeuxiemeRessources"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
                                 android:layout_centerHorizontal="true"
-                                android:layout_below="@+id/RelativeLayoutPremiereRessources">
+                                android:layout_below="@+id/RelativeLayoutDeuxiemeRessources">
 
                                 <ImageView
-                                    android:id="@+id/ImageViewArgentPremiereRessource"
+                                    android:id="@+id/ImageViewArgentDeuxiemeRessource"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:src="@drawable/argent"/>
 
                                 <TextView
-                                    android:id="@+id/TextViewArgentPremiereRessource"
-                                    android:layout_toEndOf="@+id/ImageViewArgentPremiereRessource"
+                                    android:id="@+id/TextViewArgentDeuxiemeRessource"
+                                    android:layout_toEndOf="@+id/ImageViewArgentDeuxiemeRessource"
                                     android:layout_marginStart="10dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/argentPremiereRessources"
-                                    android:textSize="30sp"
+                                    android:text="@string/argenteDeuxiemeRessources"
+                                    android:textSize="35sp"
                                     android:layout_centerVertical="true"/>
                             </RelativeLayout>
                         </RelativeLayout>
 
                         <RelativeLayout
-                            android:id="@+id/RelativeLayoutContentNiveauSecuriteGlobale"
+                            android:id="@+id/RelativeLayoutContenTroisiemeRessources"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_below="@+id/RelativeLayoutContentNiveauReputation">
+                            android:layout_alignParentTop="true"
+                            android:layout_marginStart="50dp"
+                            android:layout_toEndOf="@+id/RelativeLayoutContentDeuxiemeRessources"
+                            android:layout_alignParentEnd="true">
 
-                        </RelativeLayout>
+                            <RelativeLayout
+                                android:id="@+id/RelativeLayoutTroisiemeRessources"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/custom_relative_layout_ressources"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:layout_centerHorizontal="true"
+                                android:paddingStart="15dp"
+                                android:paddingEnd="15dp"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:alpha="0.9">
 
-                        <RelativeLayout
-                            android:id="@+id/RelativeLayoutContentNiveauConditionTravail"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_below="@+id/RelativeLayoutContentNiveauSecuriteGlobale">
+                                <TextView
+                                    android:id="@+id/TextViewNombreTroisiemeRessources"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:text="@string/troisiemeRessources"
+                                    android:textSize="35sp" />
 
+                                <ImageView
+                                    android:id="@+id/ImageViewTroisiemeRessources"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_toEndOf="@+id/TextViewNombreTroisiemeRessources"
+                                    android:src="@drawable/ressources"/>
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/RelativeLayoutPrixTroisiemeRessources"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/RelativeLayoutTroisiemeRessources"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="10dp">
+
+                                <ImageView
+                                    android:id="@+id/ImageViewArgentTroisiemeRessource"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/argent"
+                                    android:layout_centerVertical="true"/>
+
+                                <TextView
+                                    android:id="@+id/TextViewArgentTroisiemeRessource"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_toEndOf="@+id/ImageViewArgentTroisiemeRessource"
+                                    android:text="@string/argenteTroisiemeRessources"
+                                    android:textSize="35sp" />
+                            </RelativeLayout>
                         </RelativeLayout>
                     </RelativeLayout>
                 </RelativeLayout>
@@ -3248,6 +3303,7 @@
                         android:textStyle="bold"
                         android:layout_centerHorizontal="true"
                         android:clickable="true"
+                        android:focusable="true"
                         />
             </RelativeLayout>
         </RelativeLayout>
